Fix: Alignement when no posts has been found in order info box.

--- a/resources/css/translationmanager.css
+++ b/resources/css/translationmanager.css
@@ -47,6 +47,7 @@
 }
 
 .translationmanager-order-or-update-projects input[type="submit"] {
+  clear: both;
   float: right;
 }
 
